--- a/2017_2022_Pts_Regression.ipynb
+++ b/2017_2022_Pts_Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "b9e4e92d",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,13 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.preprocessing import LabelEncoder"
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "ef2abaf6",
    "metadata": {
     "scrolled": true
@@ -381,7 +382,7 @@
        "[100 rows x 20 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "1951916e",
    "metadata": {
     "scrolled": true
@@ -696,7 +697,7 @@
        "[100 rows x 17 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "id": "47bc6b17",
    "metadata": {
     "scrolled": true
@@ -1023,7 +1024,7 @@
        "[100 rows x 18 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "id": "91b96940",
    "metadata": {},
    "outputs": [
@@ -1055,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "41bfd47a",
    "metadata": {
     "scrolled": true
@@ -1357,7 +1358,7 @@
        "[100 rows x 17 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1370,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "99c5d089",
    "metadata": {
     "scrolled": true
@@ -1672,7 +1673,7 @@
        "[100 rows x 17 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1687,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "id": "c282f2e4",
    "metadata": {
     "scrolled": false
@@ -1717,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "df281e08",
    "metadata": {
     "scrolled": false
@@ -1729,7 +1730,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1738,7 +1739,7 @@
     "# Format data to meet \n",
     "X = points_df3.Squad.values.reshape(-1, 1)\n",
     "\n",
-    "# Assign the target variable, or the Salary column\n",
+    "# Assign the target variable, or the Points column\n",
     "y = points_df3.Pts\n",
     "\n",
     "# Create model\n",
@@ -1750,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "id": "74d22551",
    "metadata": {},
    "outputs": [
@@ -1760,7 +1761,7 @@
        "(100, 1)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1772,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "id": "5c75fd05",
    "metadata": {
     "scrolled": true
@@ -1793,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "id": "4d002ad8",
    "metadata": {
     "scrolled": true
@@ -1820,9 +1821,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "id": "bccc05d1",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1836,6 +1839,16 @@
    "source": [
     "print(model.coef_)\n",
     "print(model.intercept_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "3bd44022",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "points_df2.to_csv(r'2017_2022_epl_squad.csv', index = False)"
    ]
   }
  ],
