Updated ipynb files to reference resources folder

--- a/2017_2022_Pts_Regression.ipynb
+++ b/2017_2022_Pts_Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b9e4e92d",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ef2abaf6",
    "metadata": {
     "scrolled": true
@@ -381,20 +381,20 @@
        "[100 rows x 20 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load csv file\n",
-    "points_df = pd.read_csv(\"2017_2022_PL_Standings.csv\", encoding = \"latin-1\")\n",
+    "points_df = pd.read_csv(\"res/2017_2022_PL_Standings.csv\", encoding = \"latin-1\")\n",
     "points_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1951916e",
    "metadata": {
     "scrolled": true
@@ -696,7 +696,7 @@
        "[100 rows x 17 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "47bc6b17",
    "metadata": {
     "scrolled": true
@@ -1023,7 +1023,7 @@
        "[100 rows x 18 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "91b96940",
    "metadata": {},
    "outputs": [
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "41bfd47a",
    "metadata": {
     "scrolled": true
@@ -1357,7 +1357,7 @@
        "[100 rows x 17 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "99c5d089",
    "metadata": {
     "scrolled": true
@@ -1672,7 +1672,7 @@
        "[100 rows x 17 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1687,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "c282f2e4",
    "metadata": {
     "scrolled": false
@@ -1717,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "df281e08",
    "metadata": {
     "scrolled": false
@@ -1729,7 +1729,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1750,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "74d22551",
    "metadata": {},
    "outputs": [
@@ -1760,7 +1760,7 @@
        "(100, 1)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1772,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "5c75fd05",
    "metadata": {
     "scrolled": true
@@ -1793,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "4d002ad8",
    "metadata": {
     "scrolled": true
@@ -1820,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "bccc05d1",
    "metadata": {},
    "outputs": [
@@ -1837,6 +1837,14 @@
     "print(model.coef_)\n",
     "print(model.intercept_)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e5cf19b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1855,7 +1863,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
