--- a/2017_2018_Pts_Regression.ipynb
+++ b/2017_2018_Pts_Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "id": "b9e4e92d",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "ef2abaf6",
    "metadata": {
     "scrolled": true
@@ -578,20 +578,20 @@
        "19                    Ben Foster                             Relegated  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load csv file\n",
-    "points_df = pd.read_csv(\"2017_2018_PL_Standings.csv\", index_col=False)\n",
+    "points_df = pd.read_csv(\"res/2017_2018_PL_Standings.csv\", index_col=False)\n",
     "points_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "1951916e",
    "metadata": {
     "scrolled": true
@@ -1067,7 +1067,7 @@
        "19 -14.1   -0.37     24,520  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "id": "47bc6b17",
    "metadata": {
     "scrolled": true
@@ -1598,7 +1598,7 @@
        "19 -14.1   -0.37     24,520        2017      2018  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "91b96940",
    "metadata": {},
    "outputs": [
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "id": "41bfd47a",
    "metadata": {
     "scrolled": true
@@ -2148,7 +2148,7 @@
        "19   31    0.82  34.3  48.5 -14.1   -0.37     24,520  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2161,7 +2161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "id": "99c5d089",
    "metadata": {
     "scrolled": true
@@ -2679,7 +2679,7 @@
        "19  34.3  48.5 -14.1   -0.37     24,520  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2694,7 +2694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "id": "c282f2e4",
    "metadata": {
     "scrolled": false
@@ -2724,7 +2724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "id": "df281e08",
    "metadata": {
     "scrolled": false
@@ -2736,7 +2736,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2757,7 +2757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "id": "74d22551",
    "metadata": {},
    "outputs": [
@@ -2767,7 +2767,7 @@
        "(20, 1)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2779,7 +2779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "id": "5c75fd05",
    "metadata": {
     "scrolled": true
@@ -2800,7 +2800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "id": "4d002ad8",
    "metadata": {
     "scrolled": true
@@ -2827,7 +2827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "bccc05d1",
    "metadata": {},
    "outputs": [
@@ -2836,7 +2836,7 @@
      "output_type": "stream",
      "text": [
       "[-0.55714286]\n",
-      "57.34285714285714\n"
+      "57.342857142857135\n"
      ]
     }
    ],
@@ -2844,6 +2844,14 @@
     "print(model.coef_)\n",
     "print(model.intercept_)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f3ca6ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -2862,7 +2870,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
